# chatskell

./: LICENSE  README.md  chatskell.cabal
app/: Main.hs
src/: AssetLoader.hs  Chatskell.hs  Main.hs
static/: chat.html  chat.js  style.css
