name:                chatskell
version:             0.1.0.0
synopsis:            Web Chat Application
description:         Please see README.md
homepage:            https://github.com/three/chatskell
license:             BSD3
license-file:        LICENSE
author:              Eric Roberts
maintainer:          eric@threedot14.com
copyright:           2016 Eric Roberts
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AssetLoader, Chatskell
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       file-embed,
                       http-types,
                       text,
                       wai,
                       warp
  default-language:    Haskell2010

executable chatskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chatskell
  default-language:    Haskell2010

test-suite chatskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chatskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chatskell/chatskell
